corpus/declaration.txt
==================
Variable declaration
==================

var x : Int
var x, y : Int

---

(source_file
  (variable_declaration
    (variable) (type))
  (variable_declaration
    (variable) (variable) (type)))

==================
Constant declaration
==================

con X : Int
con X, Y : Int

---

(source_file
  (constant_declaration
    (constant) (type))
  (constant_declaration
    (constant) (constant) (type)))

==================
Let declaration
==================

let P = x = 5

---

(source_file
  (let_declaration
    (constant) (eq (variable) (integer))))
