corpus/expression.txt
==================
Integer
==================

x := 0

---

(source_file
  (assign
    (variable)
    (integer)))

==================
Variable
==================

x := x

---

(source_file
  (assign
    (variable)
    (variable)))

==================
Constant
==================

x := X

---

(source_file
  (assign
    (variable)
    (constant)))

==================
Simple
==================

x := (x + 1) * 3 - (1)

---

(source_file
  (assign
    (variable)
    (sub
      (mul
        (add (variable) (integer))
        (integer))
      (integer))
    ))

==================
Op
==================

x := f(1, g(2, 3))

---

(source_file
  (assign
    (variable)
    (op
      (op_name)
      (integer)
      (op
        (op_name)
        (integer)
        (integer)))))
