corpus/expression/numerical.txt
==================
Integer
==================

{ 0 }

---

(source_file
  (assert
    (integer)))

==================
Variable
==================

{ x }

---

(source_file
  (assert
    (variable)))

==================
Constant
==================

{ X }

---

(source_file
  (assert
    (constant)))

==================
Numerical
==================

{ (x + 1) * 3 - (1) }

---

(source_file
  (assert
    (sub
      (mul
        (add (variable) (integer))
        (integer))
      (integer))
    ))
