corpus/statement.txt
==================
Skip
==================

skip
skip
skip

---

(source_file
  (skip)
  (skip)
  (skip))

==================
Abort
==================

abort
abort
abort

---

(source_file
  (abort)
  (abort)
  (abort))

==================
Assign
==================

x := 0

---

(source_file
  (assign
    (variable)
    (integer)))

==================
Assert
==================

{ True }

---

(source_file
  (assert
    (boolean)))

==================
Assert with bound
==================

{ True, bnd: 100 }

---

(source_file
  (assert_with_bound
    (boolean)
    (integer)))

==================
If 1
==================

if True -> skip
fi

---

(source_file
  (if
    (guarded_command (boolean) (skip))))

==================
If 2
==================

if True -> skip
 | False -> abort
fi

---

(source_file
  (if
    (guarded_command (boolean) (skip))
    (guarded_command (boolean) (abort))))

==================
Do
==================

do True -> skip
od

---

(source_file
  (do
    (guarded_command (boolean) (skip))))

==================
Spec
==================

{!
!}

{!
skip
!}

{!
  skip
  {!
  skip
  !}
!}

---

(source_file
  (spec)
  (spec
    (skip))
  (spec
    (skip)
    (spec
      (skip))))
